--- a/theme/index.html
+++ b/theme/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Biz Express</title>
+    <title>inThesis | Asesoría de Tesis</title>
 	<!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -37,9 +38,9 @@
                         <li class="scroll"><a href="#blog">Programas</a></li>
                         <li class="scroll"><a href="#pricing">Inversión Económica</a></li>
                         <li class="scroll"><a href="#testimonial">Asesores</a></li>
-                        <li class="scroll"><a href="aulavirtual" target="_blank">Aula Virtual</a></li>
                         <!--<li class="scroll"><a href="#testimonial">Testimonios</a></li>-->
-                       <li class="scroll"><a href="#get-in-touch">Contáctenos</a></li>                        
+                       <li class="scroll"><a href="#get-in-touch">Contáctenos</a></li>
+                       <li><a href="aulavirtual" target="_blank">Aula Virtual</a></li>                     
                     </ul>
                 </div>
             </div><!--/.container-->
@@ -57,7 +58,7 @@
                                     <h2><h1 style="color: white;"">Bienvenido a inThesis</h1></h2>
                                     <h1 style="color: white;">Asesoría de Tesis</h1>
                                     <h3 style="color: white;">- Asesoramiento Garantizado con Profesionales de Éxito -</h3>
-                                    <a class="btn btn-primary btn-lg" href="#services">Saber más</a>
+                                    <a class="btn btn-primary btn-lg scroll" href="#nosotros">Saber más</a>
                                 </div>
                             </div>
                         </div>
@@ -333,30 +334,32 @@ ing elit, sed do eiusmod .</p>
         <div class="container">
             <div class="section-header">
                 <h2 class="section-title text-center wow fadeInDown">INVERSIÓN ECONÓMICA</h2>
-                <!--<p class="text-center wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>-->
+                <p class="text-center wow fadeInDown">Conoce nuestra modalidad de la inversión económica</p>
             </div>
 
-            <div class="row">
+            <div class="row" style="background: white; padding-top: 25px; padding-bottom: 25px;">
                 <div class="col-sm-12">
                     <div class="wow zoomIn" data-wow-duration="400ms" data-wow-delay="0ms">
-                        <ul class="pricing">
-                            <li class="plan-header">
-                                <div class="plan-name">
-                                    Starter Pack
-                                </div>
-                                <div class="plan-price">
-                                    $39 <span>per month</span>
-                                </div>
-                                
-                            </li>
-                            <li>1 DOMAIN</li>
-                            <li>100GB DISK SPACE</li>
-                            <li>UNLIMITED BANDWIDTH</li>
-                            <li>SHARED SSL CERTIFICATE</li>
-                            <li>10 EMAIL ADDRESS</li>
-                            <li>24/7 SUPPORT</li>
-                            <li class="plan-purchase"><a class="btn btn-primary" href="#">BUY NOW</a></li>
-                        </ul>
+                        <div>
+                            <div class="features">
+                                <div class="col-md-5 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="0ms">
+                                    <div class="media service-box">
+                                        <div>
+                                            <img class="img-responsive" src="images/inversion-economica-1.jpg" alt="img">
+                                        </div>
+                                    </div>
+                                </div><!--/.col-md-6-->
+
+                                <div class="col-md-7 wow fadeInUp" data-wow-duration="300ms" data-wow-delay="100ms">
+                                    <div class="media service-box">
+                                        <div class="media-body">
+                                            <p class="text-left" style="line-height: 26px; color: black;">La inversión que realice el tesista será en función a los servicios que requiera, por ello es que los montos pueden variar de acuerdo a cada caso en concreto. Sugerimos que nos contacte.</p>
+                                            <p class="text-left" style="line-height: 26px; color: black;">Por otro lado, <strong>Thesis In Iure</strong> ofrece becas referido a la designación de una serie de asesores para que el investigador pueda mejorar y ejecutar su proyecto de investigación; ésta beca aplica para aquellos tesistas que presenten una idea o tema de investigación totalmente innovadora, el cual represente un reto intelectual a la comunidad jurídica. La evaluación del tema de investigación será se realizará por una comisión designada de <strong>Thesis In Iure</strong> a fin de observar su trascendencia e impacto.</p>
+                                        </div>
+                                    </div>
+                                </div><!--/.col-md-6-->
+                            </div>
+                        </div>
                     </div>
                 </div>        
             </div>
@@ -375,10 +378,10 @@ ing elit, sed do eiusmod .</p>
             <div class="row">
                 <div class="col-sm-6">
                 <div class="panel-one">
-                <div class="user-img"><img alt="" src="images/testimonail_1.jpg"></div>
+                <div class="user-img"><img class="img-circle" alt="" src="images/test-img1.jpg"></div>
                 <div class="testi-info">
-                <h4>Jonathon Andrew</h4>
-                <h5>Lorem ipsum dolor sit amet</h5>
+                <h4>Pierre Vivanco</h4>
+                <h5>Metodólogo Principal</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua Lorem ipsum dolor sit amet, consectetur.</p>
                 </div>
                 </div>
@@ -387,10 +390,10 @@ ing elit, sed do eiusmod .</p>
                 </div>
                 <div class="col-sm-6">
                 <div class="panel-one">
-                <div class="user-img"><img alt="" src="images/testimonail_2.jpg"></div>
+                <div class="user-img"><img class="img-circle" alt="" src="images/test-img2.jpg"></div>
                 <div class="testi-info">
-                <h4>Jonathon Andrew</h4>
-                <h5>Lorem ipsum dolor sit amet</h5>
+                <h4>Omar Vivanco</h4>
+                <h5>Gerente Institucional</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua Lorem ipsum dolor sit amet, consectetur.</p>
                 </div>
                 </div>
@@ -399,10 +402,10 @@ ing elit, sed do eiusmod .</p>
                 </div>
                 <div class="col-sm-6">
                 <div class="panel-one">
-                <div class="user-img"><img alt="" src="images/testimonail_3.jpg"></div>
+                <div class="user-img"><img class="img-circle" alt="" src="images/test-img3.jpg"></div>
                 <div class="testi-info">
-                <h4>Jonathon Andrew</h4>
-                <h5>Lorem ipsum dolor sit amet</h5>
+                <h4>Héctor Vivanco</h4>
+                <h5>Gerente de TI</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua Lorem ipsum dolor sit amet, consectetur.</p>
                 </div>
                 </div>
@@ -411,10 +414,10 @@ ing elit, sed do eiusmod .</p>
                 </div>
                 <div class="col-sm-6">
                 <div class="panel-one">
-                <div class="user-img"><img alt="" src="images/testimonail_4.jpg"></div>
+                <div class="user-img"><img class="img-circle" alt="" src="images/test-img4.jpg"></div>
                 <div class="testi-info">
-                <h4>Jonathon Andrew</h4>
-                <h5>Lorem ipsum dolor sit amet</h5>
+                <h4>Fernando Martínez</h4>
+                <h5>Contador Responsable</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doeiusmod tempor incididunt ut labore et dolore magna aliqua Lorem ipsum dolor sit amet, consectetur.</p>
                 </div>
                 </div>
