--- a/theme/index.html
+++ b/theme/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Asesoría de Tesis en Derecho">
+    <meta name="keywords" content="inThesis,Asesoria,Derecho,Peru,Huancayo">
+    <meta name="author" content="Hector Vivanco">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>inThesis | Asesoría de Tesis en Derecho</title>
 	<!-- core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -418,7 +420,7 @@
 
     <footer id="footer">
         <div class="container text-center">
-          Todos los derechos reservados © 2018 | Hecho por Hector Arturo Vivanco Nuñez
+          Todos los derechos reservados © 2018 | Hecho por <a href="https://www.facebook.com/hevivanco" target="_blank">Hector Vivanco</a>
         </div>
     </footer><!--/#footer-->
 
@@ -469,7 +471,7 @@ $("#owl-example").owlCarousel({
         </div>
     </div>
     <div class="modal-footer">
-     <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+     <button type="button" class="btn btn-danger btnCerrarModal" data-dismiss="modal">Cerrar</button>
     </div>
    </div>
  </div>
@@ -492,7 +494,7 @@ $("#owl-example").owlCarousel({
         </div>
     </div>
     <div class="modal-footer">
-     <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+     <button type="button" class="btn btn-danger btnCerrarModal" data-dismiss="modal">Cerrar</button>
     </div>
    </div>
  </div>
@@ -514,7 +516,7 @@ $("#owl-example").owlCarousel({
         </div>
     </div>
     <div class="modal-footer">
-     <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+     <button type="button" class="btn btn-danger btnCerrarModal" data-dismiss="modal">Cerrar</button>
     </div>
    </div>
  </div>
@@ -537,7 +539,7 @@ $("#owl-example").owlCarousel({
         </div>
     </div>
     <div class="modal-footer">
-     <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+     <button type="button" class="btn btn-danger btnCerrarModal" data-dismiss="modal">Cerrar</button>
     </div>
    </div>
  </div>
@@ -566,7 +568,7 @@ $("#owl-example").owlCarousel({
         </div>
     </div>
     <div class="modal-footer">
-     <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+     <button type="button" class="btn btn-danger btnCerrarModal" data-dismiss="modal">Cerrar</button>
     </div>
    </div>
  </div>
@@ -593,7 +595,7 @@ $("#owl-example").owlCarousel({
         </div>
     </div>
     <div class="modal-footer">
-     <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+     <button type="button" class="btn btn-danger btnCerrarModal" data-dismiss="modal">Cerrar</button>
     </div>
    </div>
  </div>
@@ -618,11 +620,30 @@ $("#owl-example").owlCarousel({
         </div>
     </div>
     <div class="modal-footer">
-     <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
+     <button type="button" class="btn btn-danger btnCerrarModal" data-dismiss="modal">Cerrar</button>
     </div>
    </div>
  </div>
 </div>
-
+<!-- WhatsHelp.io widget -->
+<script type="text/javascript">
+    (function () {
+        var options = {
+            whatsapp: "+51987547741", // WhatsApp number
+            call: "+51987547741", // Call phone number
+            company_logo_url: "//static.whatshelp.io/img/flag.png", // URL of company logo (png, jpg, gif)
+            greeting_message: "Buen día, bienvenido al Portal Web de inThesis ¿En qué podemos informarle?", // Text of greeting message
+            call_to_action: "Contáctenos", // Call to action
+            button_color: "#285A7B", // Color of button
+            position: "right", // Position may be 'right' or 'left'
+            order: "whatsapp,call" // Order of buttons
+        };
+        var proto = document.location.protocol, host = "whatshelp.io", url = proto + "//static." + host;
+        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = url + '/widget-send-button/js/init.js';
+        s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
+        var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
+    })();
+</script>
+<!-- /WhatsHelp.io widget -->
 </body>
 </html>
